Add updated Marathi bird guide PDF and presentation with corrected entries

--- a/latex/bird_guide.tex
+++ b/latex/bird_guide.tex
@@ -303,217 +303,217 @@ Under the following terms:
 \birdentry{Black Kite}{\textit{Milvus migrans}}
   {Kite size}
   {Very common resident}
-  {A large bird of prey with a distinctive forked tail and long wings. The plumage is mostly blackish-brown with lighter underparts.}
-  {Found throughout the Indian subcontinent, including the University of Pune campus.}
-  {Often seen soaring high in the sky, searching for prey. Feeds on small mammals, birds, and carrion.}
-  {Breeds December to April. Builds nests in tall trees, using sticks and other plant materials. Lays 2-3 whitish eggs with brown spots. Both parents incubate for about 30 days and care for young.}
+  {Large raptor with forked tail. Dark brown plumage. Wings held in shallow V when soaring. Wings appear pale from below.}
+  {Throughout campus, especially near human habitation}
+  {Scavenges around garbage dumps. During breeding season hunts insects and small vertebrates. Known to rob food from crows.}
+  {Breeds December to April. Builds large stick nest in tall trees. Clutch of 2-3 white eggs. Both parents incubate for 30-35 days.}
   {black-kite.jpg}
 
 \birdentry{Red-naped Ibis}{\textit{Pseudibis papillosa}}
-  {Kite-}
+  {Kite-sized}
   {Common resident}
-  {Large black bird with red patch on nape. Long curved bill and bare red patch on crown distinctive.}
-  {Found in open areas, grasslands and waterbodies across campus.}
-  {Walks deliberately while foraging. Usually in small groups. Probes soil for insects and small vertebrates.}
-  {Breeds mainly during monsoon. Builds platform nest in large trees. Lays 2-4 pale bluish-white eggs.}
+  {Large black bird with red patch on nape and bare red crown patch. Long curved bill. Metallic sheen on neck and wings.}
+  {Open areas, grasslands and moist ground}
+  {Usually in small flocks. Probes marshy areas for insects, snails and small frogs.}
+  {Breeds March to August. Platform nest in large trees. Clutch of 2-4 pale blue eggs. Both parents incubate for 28-30 days.}
   {red-naped-ibis.jpg}
 
-\birdentry{Peregrine Falcon}{\textit{Falco peregrinus}}
-  {Kite-}
-  {Uncommon winter visitor}
-  {Large, powerful falcon with dark grey upperparts, barred underparts, and distinctive black 'moustache' marking.}
-  {Occasionally seen around tall buildings and open areas of campus.}
-  {Swift and agile hunter, known for spectacular aerial dives. Feeds mainly on birds caught in flight.}
-  {Does not breed on campus; winter visitor only.}
+\birdentry{Peregrine Falcon}{\textit{Falco peregrinus peregrinator}}
+  {Kite-sized}
+  {Uncommon resident}
+  {Powerful falcon with dark slaty upperparts, white-to-buffish barred underparts, and broad black moustachial stripe.}
+  {Around tall buildings and open areas}
+  {Makes spectacular stoops on pigeons and waterfowl from great heights. Extremely fast and agile hunter.}
+  {Breeds February to April. Nests on cliff ledges or tall buildings. Clutch of 3-4 brownish-spotted eggs. Both parents participate in nesting duties.}
   {peregrine-falcon.jpg}
 
 \birdentry{Shikra}{\textit{Accipiter badius}}
   {Myna+}
   {Common resident}
-  {A small hawk with a distinctive red eye and a barred chest. The upperparts are gray, and the underparts are white with fine rufous barring.}
-  {Widely distributed across the Indian subcontinent, including the University of Pune campus.}
-  {Prefers wooded areas and gardens. Feeds on small birds, mammals, and insects.}
-  {Breeds March to July. Builds nests in trees, using twigs and leaves. Clutch of 3-4 pale bluish-white eggs. Female does most incubation for 28-30 days, male provides food.}
+  {Small compact hawk. Male blue-grey above, rufous barred white below. Female browner above. Deep red iris, yellow legs distinctive.}
+  {Wooded areas, gardens and groves across campus}
+  {Bold hunter, makes swift dashes at prey from concealed perches. Feeds mainly on lizards, large insects, small birds and rodents.}
+  {Breeds March to June. Builds neat stick nest high in trees. Clutch of 3-4 bluish-white eggs. Female incubates for 28-30 days.}
   {shikra.jpg}
 
 \birdentry{White-breasted Waterhen}{\textit{Amaurornis phoenicurus}}
   {Bulbul+}
   {Common resident}
-  {A medium-sized bird with a white face, throat, and breast, and a dark brown body. It has a distinctive red patch on the base of its bill.}
-  {Found throughout the Indian subcontinent, including the University of Pune campus.}
-  {Prefers marshy areas and wetlands. Feeds on insects, small fish, and plant matter.}
-  {Builds nests in dense vegetation near water, using plant materials. Lays 4-6 creamy white eggs with reddish-brown spots. Both parents share incubation duties for about 19-20 days and care for the chicks.}
+  {Dark slaty-grey above, white face, neck and breast. Red base to bill and undertail. Legs greenish-yellow.}
+  {Around ponds, marshes and wet ditches with good cover}
+  {Skulking but not particularly shy. Walks deliberately, flicking tail. Feeds on insects, molluscs, seeds and vegetable matter.}
+  {Breeds June to September. Builds pad of rushes in dense vegetation near water. Clutch of 6-7 buff eggs with reddish spots.}
   {white-breasted-waterhen.jpg}
 
 \birdentry{Indian Pond Heron}{\textit{Ardeola grayii}}
   {Myna+}
   {Very common resident}
-  {A medium-sized heron with a brownish body and white wings. It has a distinctive yellow bill and legs.}
-  {Found throughout the Indian subcontinent, including the University of Pune campus.}
-  {Prefers wetlands, ponds, and marshes. Feeds on fish, frogs, and insects.}
-  {Breeds June to September. Builds nests in trees or shrubs near water, using sticks and plant materials. Lays 3-5 pale blue-green eggs. Both parents incubate for about 18-24 days and feed the chicks.}
+  {Earthy brown when at rest but startlingly white in flight. Breeding birds develop golden-buff plumes on back. Yellow bill with dark tip.}
+  {Wherever there is water - ponds, marshes, paddy fields}
+  {Stands motionless or walks slowly when hunting. Suddenly stabs at prey. Feeds mainly on frogs, fish, crabs and aquatic insects.}
+  {Colonial nester. Breeds June to September in mixed heronries. Platform nest of twigs. Clutch of 3-5 pale blue eggs.}
   {indian-pond-heron.jpg}
 
 \birdentry{Black-crowned Night Heron}{\textit{Nycticorax nycticorax}}
   {Crow+}
-  {Uncommon resident}
-  {A medium-sized heron with a black crown and back, gray wings, and white underparts. It has red eyes and a stout bill.}
-  {Found throughout the Indian subcontinent, including the University of Pune campus.}
-  {Prefers wetlands, ponds, and marshes. Feeds on fish, frogs, and insects.}
-  {Breeds June to September. Builds nests in trees or shrubs near water, using sticks and plant materials. Lays 3-5 pale blue-green eggs. Both parents incubate for about 24-26 days and care for the young.}
+  {Common resident}
+  {Stocky heron with black crown and back, grey wings, white forehead and underparts. Red eyes distinctive. Juveniles brown and streaked.}
+  {Wetlands and water bodies with good tree cover nearby}
+  {Most active at dusk and dawn. Roosts by day in dense trees. Stands hunched at water's edge. Feeds mainly on fish, frogs, and aquatic insects.}
+  {Colonial nester. Breeds April to September. Platform nest of sticks in trees near water. Clutch of 3-4 pale blue eggs. Both parents share duties.}
   {black-crowned-night-heron.jpg}
 
 \birdentry{Cattle Egret}{\textit{Bubulcus ibis}}
   {Myna++}
   {Very common resident}
-  {A medium-sized egret with white plumage and a yellow bill. During the breeding season, it develops orange-buff plumes on its head, chest, and back.}
-  {Found throughout the Indian subcontinent, including the University of Pune campus.}
-  {Often seen near cattle, feeding on insects and small animals disturbed by the grazing animals.}
-  {Breeds June to September during monsoon. Builds nests in colonies, using sticks and plant materials. Lays 3-4 pale blue eggs. Both parents incubate for about 23-26 days and feed the chicks.}
+  {Stocky white egret with short thick neck. Breeding birds develop rich orange-buff plumes on head, neck and back. Yellow bill becomes orange-red in breeding.}
+  {Grasslands and agricultural areas, often following grazing cattle}
+  {Constantly follows cattle and other livestock, catching disturbed insects. More terrestrial than other egrets. Often in flocks.}
+  {Colonial nester. Breeds June to September. Platform nest in mixed heronries. Clutch of 3-4 pale blue eggs. Both parents incubate and feed young.}
   {cattle-egret.jpg}
 
 \birdentry{Little Egret}{\textit{Egretta garzetta}}
   {Myna++}
   {Common resident}
-  {A medium-sized egret with white plumage, a black bill, and black legs with yellow feet. During the breeding season, it develops long, delicate plumes on its head, chest, and back.}
-  {Found throughout the Indian subcontinent, including the University of Pune campus.}
-  {Prefers wetlands, ponds, and marshes. Feeds on fish, frogs, and insects.}
-  {Breeds June to September. Builds nests in colonies, using sticks and plant materials. Lays 3-5 pale blue-green eggs. Both parents incubate for about 21-25 days and care for the young.}
+  {Slender white egret with long neck, black bill and legs. Distinctive yellow feet. Breeding birds develop long lacy plumes on head, neck and back.}
+  {All types of wetlands and water bodies}
+  {Active hunter, running and darting after prey in shallow water. Often uses feet to stir up prey. More aquatic than Cattle Egret.}
+  {Colonial nester. Breeds June to September in mixed heronries. Platform nest of sticks. Clutch of 3-5 pale greenish-blue eggs.}
   {little-egret.jpg}
 
 \birdentry{Blue Rock Pigeon}{\textit{Columba livia}}
   {Myna+}
   {Very common resident}
-  {A plump, grey-colored bird with iridescent neck feathers. Two dark wingbars and a dark terminal tail band are distinctive features.}
-  {Found throughout the Indian subcontinent, particularly abundant in urban areas including the University of Pune campus.}
-  {Highly adapted to urban life. Often seen in flocks, feeding on grains and seeds on the ground.}
-  {Breeds throughout the year. Nests in building ledges, window sills, and other artificial structures, using twigs and small sticks. Lays 2 white eggs. Both parents incubate for about 17-19 days and feed the chicks.}
+  {Bluish-grey with iridescent green and purple sheen on neck. Two prominent black wingbars and dark terminal tail band. Many color variants in urban birds.}
+  {Urban areas, especially around buildings and monuments}
+  {Gregarious, feeds in flocks on ground. Swift direct flight. Highly adapted to human settlements.}
+  {Breeds throughout year. Flimsy platform nest on ledges of buildings. Clutch of 2 white eggs. Both parents incubate and feed squabs with 'crop milk'.}
   {blue-rock-pigeon.jpg}
 
 \birdentry{Spotted Dove}{\textit{Streptopelia chinensis}}
   {Myna}
   {Common resident}
-  {A slim, long-tailed dove with pinkish-grey plumage and distinctive black-and-white spotting on the nape.}
-  {Widespread across the campus and surrounding areas.}
-  {Usually seen in pairs or small groups, foraging on the ground for seeds and grains.}
-  {Builds a flimsy platform nest in trees and shrubs, often in dense foliage. Lays 2 white eggs. Both parents incubate for about 14-16 days and care for the chicks.}
+  {Vinaceous-grey dove with black-and-white checkered patch on hindneck. Long graduated tail with white corners. Pale buffy-pink underparts.}
+  {Gardens, groves, and light woodland across campus}
+  {Usually in pairs. Walks sedately on ground searching for seeds. Characteristic mellow cooing call 'ku-kroo-ku'.}
+  {Breeds mainly February to September. Flimsy platform nest of twigs in bushes or small trees. Clutch of 2 white eggs. Both parents share duties.}
   {spotted-dove.jpg}
 
 \birdentry{Little Brown Dove}{\textit{Streptopelia senegalensis}}
   {Myna-}
   {Common resident}
-  {A small, delicate dove with pale brown plumage and a lilac tinge to the neck. Black-and-red checkered pattern on neck sides.}
-  {Common throughout the campus, especially in open areas.}
-  {Often seen in pairs, feeding on seeds on the ground. Has a distinctive soft, musical call.}
-  {Creates simple twig nests in bushes and low trees. Lays 2 white eggs. Both parents incubate for about 13-15 days and feed the chicks.}
+  {Dainty dove, smaller and slimmer than Spotted Dove. Pinkish-brown above, vinous below. Blue-grey wings with rufous primaries. Distinctive speckled collar patch.}
+  {Open areas with scattered trees and scrub}
+  {More terrestrial than other doves. Frequently seen in pairs on ground or wires. Musical call 'proo-proo-proo'.}
+  {Breeds year-round. Simple platform nest low in thorny trees. Clutch of 2 white eggs. Shared parental care.}
   {little-brown-dove.jpg}
 
 \birdentry{Red-wattled Lapwing}{\textit{Vanellus indicus}}
   {Myna++}
   {Common resident}
-  {A large plover with distinctive red wattles in front of the eyes. Brown wings, black head and breast, white face and underparts.}
-  {Found in open areas across the campus, particularly near water bodies.}
-  {Known for its alarm call "did-he-do-it". Active during day and night, feeds on insects and small invertebrates.}
-  {Nests on the ground in shallow scrapes, often on gravelly or rocky areas. Lays 3-4 olive-brown eggs with black spots. Both parents share incubation duties for about 28-30 days and care for the chicks.}
+  {Large plover with distinctive red fleshy wattles in front of eyes. Black-and-white head and neck, brown back, white belly. Red bill with black tip.}
+  {Open areas, playgrounds, and margins of water bodies}
+  {Bold and noisy. Runs in short bursts, stopping abruptly. Famous for persistent 'did-he-do-it' calls day and night.}
+  {Breeds mainly March to August. Nest is shallow scrape on ground, often on gravel. Clutch of 4 stone-colored eggs with black blotches. Both parents very aggressive in nest defense.}
   {red-wattled-lapwing.jpg}
 
-\birdentry{Asian Koel}{\textit{Eudynamys scolopacea}}
+\birdentry{Asian Koel}{\textit{Eudynamys scolopaceus}}
   {Crow-}
   {Common resident}
-  {Male glossy black with red eyes; female brown with white spots, barred underneath. Sexual dimorphism prominent.}
-  {Common throughout the campus, especially in wooded areas.}
-  {Known for its distinctive "ku-oo" call. Parasitizes crows' nests. Feeds mainly on fruits and berries.}
-  {Brood parasite, lays eggs in nests of crows and other birds.}
+  {Striking sexual dimorphism - male glossy blue-black with crimson eye; female brown with white spots and bars. Both with heavy pale green bill.}
+  {Wooded areas and gardens with fruiting trees}
+  {More often heard than seen. Male's loud 'ku-ooo' calls increase in summer. Mainly frugivorous but also eats insects and eggs.}
+  {Brood parasite primarily on House Crows. Breeding season March to August coinciding with hosts. Female lays one egg per crow nest.}
   {asian-koel.jpg}
 
 \birdentry{Grey-bellied Cuckoo}{\textit{Cacomantis passerinus}}
-  {Myna-}
+  {Bulbul-}
   {Common summer visitor}
-  {Grey bird with dark grey breast and pale belly. Yellow eye-ring distinctive.}
+  {Grey bird with dark grey breast and pale belly. Yellow eye-ring distinctive. Female browner. Juvenile heavily barred below.}
   {Found in wooded areas across campus.}
-  {Rather secretive. Known for plaintive whistling calls. Feeds mainly on insects.}
-  {Brood parasite, laying eggs in warblers' and tailorbirds' nests.}
+  {Rather secretive. Known for distinctive ascending whistle 'pee-pee-pee-pee'. Feeds mainly on insects, especially hairy caterpillars.}
+  {Brood parasite, laying eggs mainly in nests of Prinias and Cisticolas. Breeding season coincides with hosts, March to September.}
   {grey-bellied-cuckoo.jpg}
 
 \birdentry{Common Hawk-Cuckoo}{\textit{Hierococcyx varius}}
   {Myna++}
   {Common resident}
-  {Hawk-like appearance with barred underparts. Yellow eye-ring. Very similar to Shikra in flight.}
+  {Remarkable resemblance to Shikra hawk in size, shape and plumage - an example of aggressive mimicry. Finely barred underparts.}
   {Found throughout wooded areas of campus.}
-  {Known for distinctive "brain-fever" call, especially in summer. Feeds on insects and caterpillars.}
-  {Brood parasite, primarily targeting babblers. Active during breeding season March to July.}
+  {Known for crescendo call "brain-fever, brain-fever, BRAIN-FEVER", increasing in pitch and intensity. Feeds mainly on insects, especially caterpillars.}
+  {Brood parasite, primarily targeting babblers. Peak breeding season March to July coinciding with host species.}
   {common-hawk-cuckoo.jpg}
 
 \birdentry{Greater Coucal}{\textit{Centropus sinensis}}
   {Crow}
   {Common resident}
-  {Large, black bird with chestnut wings and long tail. Red eyes and curved black bill are distinctive.}
+  {Large, black bird with chestnut wings and long tail. Red eyes and curved black bill distinctive. Female slightly larger.}
   {Found in dense vegetation across the campus.}
-  {Skulking habit, often seen walking on ground. Deep booming calls. Feeds on insects, small vertebrates.}
-  {Builds a domed nest in dense vegetation, usually close to the ground. Lays 3-5 white eggs. Both parents share incubation duties for about 15-16 days and care for the chicks.}
+  {Skulking habit, often seen walking on ground. Deep resonant 'whoop-whoop-whoop' calls. Feeds on snakes, lizards, large insects, and bird eggs.}
+  {Builds a domed nest in dense vegetation. Lays 3-5 white eggs. Both parents share incubation (18-19 days) and chick care.}
   {greater-coucal.jpg}
 
 \birdentry{Rose-ringed Parakeet}{\textit{Psittacula krameri}}
   {Myna++}
   {Very common resident}
-  {Bright green parakeet with long tail. Males have pink and black neck ring, females lack this feature.}
+  {Bright green parakeet with long tail. Males have pink and black neck ring, females lack this. Red bill distinctive.}
   {Abundant throughout the campus, especially in wooded areas.}
-  {Noisy, gregarious birds. Often seen in large flocks. Feeds on fruits, seeds, and grains.}
-  {Breeds December to May. Nests in tree hollows, often competing with other cavity-nesters. Lays 3-4 white eggs. Both parents incubate for about 22-24 days and feed the chicks.}
+  {Noisy, gregarious birds. Often in large communal roosts. Feeds mainly on fruits, seeds, buds, and grain crops.}
+  {Breeds December to May. Nests in tree hollows. Lays 4-6 white eggs. Female incubates for 22-24 days while male feeds her.}
   {rose-ringed-parakeet.jpg}
 
 \birdentry{Alexandrine Parakeet}{\textit{Psittacula eupatria}}
   {Crow}
   {Uncommon resident}
-  {Larger than Rose-ringed Parakeet, with massive red beak. Males have pink and black collar.}
-  {Found in wooded areas of the campus, less common than other parakeets.}
-  {Similar habits to Rose-ringed Parakeet but more wary. Feeds on fruits and seeds.}
-  {Nests in large tree cavities, preferring old growth trees. Lays 2-4 white eggs. Both parents incubate for about 23-26 days and care for the chicks.}
+  {Much larger than Rose-ringed with massive cherry-red beak. Males have broad rose-pink and black collar. Distinctive maroon shoulder patch.}
+  {Found in mature woodlands with large trees, less common than other parakeets.}
+  {Similar habits to Rose-ringed but more wary. Feeds primarily on fruits, seeds, and grain. Harsh rolling calls in flight.}
+  {Nests in large cavities of mature trees. Lays 2-4 white eggs. Female incubates for 23-26 days while male feeds her.}
   {alexandrine-parakeet.jpg}
 
 \birdentry{Plum-headed Parakeet}{\textit{Psittacula cyanocephala}}
   {Myna}
   {Common resident}
-  {Male has purple-red head, female bluish-grey. Both have green body and yellow-tipped tail.}
+  {Male has plum-red head with black collar and blue nape; female bluish-grey headed. Both have green body, yellow-tipped tail and red shoulder patch.}
   {Regular visitor to wooded areas of the campus.}
-  {Usually in pairs or small flocks. More arboreal than other parakeets. Feeds mainly on fruits and seeds.}
-  {Nests in tree hollows, breeding season varies with location. Lays 3-4 white eggs. Both parents incubate for about 22-24 days and feed the chicks.}
+  {Usually in pairs or small flocks. More arboreal than other parakeets. Feeds mainly on wild figs, fruits, and ripening grain.}
+  {Nests in tree hollows, February to May. Lays 4-6 white eggs. Female incubates for 21-23 days while male feeds her.}
   {plum-headed-parakeet.jpg}
 
 \birdentry{House Swift}{\textit{Apus affinis}}
   {Myna-}
   {Very common resident}
-  {Small swift with white rump and forked tail. Overall dark brown-black plumage.}
+  {Small swift with white rump and shallow-forked tail. Overall dark brown-black plumage. Wings long and scythe-shaped.}
   {Common throughout urban areas of the campus.}
-  {Aerial feeder, constantly on wing. Often seen in large groups swooping near buildings.}
-  {Colonial nester, builds mud nests under building eaves and bridges. Lays 2-3 white eggs. Both parents incubate for about 19-21 days and care for the chicks.}
+  {Aerial feeder, constantly on wing. Characteristic screaming parties near nesting sites. Often seen in large groups making low sweeping flights.}
+  {Colonial nester, builds retort-shaped mud nests under building eaves and bridges. Several pairs may share common entrance tunnel. Lays 2-3 white eggs.}
   {house-swift.jpg}
 
 \birdentry{Asian Palm Swift}{\textit{Cypsiurus balasiensis}}
   {Sparrow-}
   {Common resident}
-  {Smaller than House Swift, slender with deeply forked tail. Overall sooty brown appearance.}
-  {Found around palm trees across campus.}
-  {Very fast flier, rarely perches. Often seen around palm trees. Feeds exclusively on aerial insects.}
-  {Breeds year-round. Attaches small nest to palm frond underside using saliva. Lays 2-3 white eggs.}
+  {Smaller than House Swift, slender with deeply forked tail. Overall sooty brown. Distinctive stiff, fluttering wing beats.}
+  {Found around palm trees, especially Borassus and Coconut palms.}
+  {Very fast flier with quick directional changes, rarely glides. Often seen around single palms which they circle repeatedly.}
+  {Breeds year-round. Attaches tiny cup nest to underside of palm frond using saliva. Lays 2-3 elongated white eggs.}
   {asian-palm-swift.jpg}
 
 \birdentry{White-breasted Kingfisher}{\textit{Halcyon smyrnensis}}
   {Myna+}
   {Common resident}
-  {Large kingfisher with bright blue back, chocolate brown head, and white breast. Large red bill distinctive.}
+  {Large kingfisher with bright blue back, chocolate brown head, and white breast. Large red bill distinctive. Broad blue wing-band visible in flight.}
   {Found near water bodies and in gardens across campus.}
-  {Perches prominently, diving for prey. Feeds on fish, frogs, lizards, and large insects.}
-  {Breeds March to June. Nests in horizontal tunnels dug in earth banks. Lays 4-7 white eggs. Both parents share incubation duties for about 20-22 days and care for the chicks.}
+  {Bold and noisy. Maintains feeding territory which it advertises with loud screaming calls. Feeds on fish, frogs, lizards, insects, and even small birds and mice.}
+  {Breeds March to June. Nests in horizontal tunnel (1m deep) in earth banks. Lays 4-7 round white eggs. Both parents incubate and feed young.}
   {white-breasted-kingfisher.jpg}
 
 \birdentry{Common Kingfisher}{\textit{Alcedo atthis}}
   {Bulbul-}
   {Common resident}
-  {Small kingfisher with brilliant blue upperparts and orange underparts. Long bill and short tail.}
-  {Found near water bodies and ponds on campus.}
-  {Perches low over water, dives vertically for fish. Often bobs head before striking.}
-  {Breeds February to April. Nests in tunnel in earth bank. Lays 5-7 white eggs.}
+  {Small kingfisher with brilliant blue upperparts and orange underparts. Long bill and short tail. Female has reddish lower mandible.}
+  {Found near water bodies and ponds on campus. Each bird maintains linear territory along water.}
+  {Perches low over water, dives vertically for fish with splash. Often hovers before plunging. Sharp 'chee-chee' flight call.}
+  {Breeds February to April. Nests in 60-90cm tunnel in earth bank. Lays 5-7 round white eggs. Both parents incubate and feed young.}
   {common-kingfisher.jpg}
 
 \birdentry{Asian Green Bee-eater}{\textit{Merops orientalis}}
@@ -559,7 +559,7 @@ Under the following terms:
   {Found throughout campus, especially near buildings.}
   {Aerial feeder, often in mixed flocks with other swallows.}
   {Builds bottle-shaped mud nests under structures. Lays 3-4 white eggs. Both parents incubate for about 14-16 days and care for the chicks.}
-  {red-rumped-swallow.jpg}
+  {red-rumped-swallows.jpg}
 
 \birdentry{Wire-tailed Swallow}{\textit{Hirundo smithii}}
   {Sparrow}
