--- a/latex/bird_guide_marathi_presentation.tex
+++ b/latex/bird_guide_marathi_presentation.tex
@@ -192,33 +192,33 @@
 \end{frame}
 }
 
-% Bird entries (first 20 species)
+% Bird entries (first 10 species with corrections)
 \section{शिकारी पक्षी आणि बगळे}
 \birdslide{घार}{Milvus migrans}
 {घारीएवढा}
 {अतिनेहमी आढळणारा स्थानिक}
-{मोठा शिकारी पक्षी. काटेरी शेपटी आणि लांब पंख हे वैशिष्ट्य. पंख काळसर तपकिरी, तळाशी किंचित फिकट.}
-{परिसरातील सर्वत्र}
-{उंच आकाशात गरगर फिरताना दिसते. लहान सस्तन प्राणी, पक्षी आणि मृत प्राणी खाते.}
-{डिसेंबर ते एप्रिल दरम्यान प्रजनन. उंच झाडांवर काड्या-कचऱ्यापासून घरटे.}
+{मोठा शिकारी पक्षी. काटेरी शेपटी. पंख काळसर तपकिरी. उंच आकाशात घिरट्या घालताना पंख वर वळलेले दिसतात.}
+{परिसरातील सर्वत्र, विशेषतः मानवी वस्तीजवळ}
+{कचऱ्यावर जगणारा. पिल्लांच्या काळात कीटक व लहान प्राणी खातो. कावळ्यांना हुसकावून त्यांचे अन्न हिसकावून घेतो.}
+{डिसेंबर ते एप्रिल दरम्यान प्रजनन. उंच झाडांवर मोठे काड्यांचे घरटे. २-३ पांढरी अंडी घालतो.}
 {black-kite.jpg}
 
 \birdslide{काळा शराटी}{Pseudibis papillosa}
 {घारीएवढा}
 {नेहमी आढळणारा स्थानिक}
-{मोठा काळा पक्षी, मानेवर लाल पट्टा. लांब वाकडी चोच आणि डोक्यावरील उघडा लाल भाग ठळक.}
-{परिसरातील मोकळ्या जागा, गवताळ प्रदेश आणि पाणवठे}
-{हळूहळू चालत शिकार करतो. लहान गटात आढळतो. कीटक आणि लहान प्राणी खातो.}
-{पावसाळ्यात प्रजनन. मोठ्या झाडांवर मंचासारखे घरटे.}
+{मोठा काळा पक्षी, मानेवर लाल पट्टा व डोक्यावर उघडा लाल भाग. लांब वाकडी चोच. मानेला व पंखांना धातूसारकी झळाळी.}
+{मोकळ्या जागा, गवताळ प्रदेश आणि ओलसर जमीन}
+{छोट्या कळपात आढळतो. दलदलीत चोच खुपसून कीटक, गोगलगाय व लहान बेडूक खातो.}
+{मार्च ते ऑगस्ट दरम्यान प्रजनन. उंच झाडांवर मंचासारखे घरटे. २-४ फिकट निळी अंडी.}
 {red-naped-ibis.jpg}
 
-\birdslide{बहिरी ससाणा}{Falco peregrinus}
+\birdslide{बहिरी ससाणा}{Falco peregrinus peregrinator}
 {घारीएवढा}
-{दुर्मिळ हिवाळी पाहुणा}
-{मोठा, शक्तिशाली ससाणा. वरचा भाग गडद करडा, खालून पट्टेदार. काळा 'मिशांसारखा' पट्टा विशिष्ट.}
-{कधीकधी उंच इमारती आणि मोकळ्या जागांमध्ये}
-{वेगवान आणि चपळ शिकारी. हवेत भरारी मारून पक्षी पकडतो.}
-{परिसरात प्रजनन करत नाही; फक्त हिवाळी पाहुणा.}
+{दुर्मिळ स्थानिक}
+{शक्तिशाली ससाणा. वरचा भाग काळसर स्लेटी, छाती व पोट पांढरे-तपकिरी पट्टेदार. डोक्यावरून काळा पट्टा जातो.}
+{उंच इमारती व मोकळ्या जागांमध्ये}
+{हवेत उंच भरारी मारून कबुतरे व पाणपक्षी यांच्यावर झडप घालतो. वेगवान व चपळ शिकारी.}
+{फेब्रुवारी ते एप्रिल प्रजनन. खडकाळ कड्यावर किंवा उंच इमारतींवर घरटे. ३-४ तपकिरी ठिपक्यांची अंडी.}
 {peregrine-falcon.jpg}
 
 \birdslide{शिक्रा}{Accipiter badius}
